[package]
name = "mdb"
version = "0.1.0"
authors = ["Masahiro Tanaka <plaza.tumbling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
zerocopy = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.1"
sha-1= "0.9"
md-5 = "0.9"